cmake_minimum_required(VERSION 3.30)
project(UI_Recursividad)

set(CMAKE_CXX_STANDARD 20)

add_executable(UI_Recursividad main.cpp)
add_executable(GTP1ej2 GTP1ej2.cpp)
add_executable(GTP1ej3 GTP1ej3.cpp)
add_executable(udemyS11C113 udemyS11C113.cpp)
add_executable(GTP1ej4 GTP1ej4.cpp)
add_executable(GTP1ej5 GTP1ej5.cpp)
add_executable(GTP1ej6 GTP1ej6.cpp)
add_executable(GTP1ej7 GTP1ej7.cpp)
